# Travel-Planner

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  contracts.py  parser.py  prompts.py  runtime.py  tool_registry.py
backend/app/agent/workflows/: __init__.py  trip_workflow.py
backend/app/api/routes/: __init__.py  map.py  poi.py  trip.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/integrations/: __init__.py
backend/app/integrations/llm/: __init__.py  client.py
backend/app/integrations/mcp/: __init__.py  amap_client.py  stdio_client.py
backend/app/integrations/photos/: __init__.py  unsplash_client.py
backend/app/schemas/: __init__.py  map.py  trip.py
backend/app/services/: __init__.py  map_service.py  photo_service.py  trip_service.py
backend/tests/: test_agent_runtime_protocol.py
